--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -2,7 +2,7 @@ services:
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
-    user: uid:gid
+    #user: uid:gid
     network_mode: 'host'
     volumes:
       - ~/homelab/jellyfin/config:/config
