added media storage to jellyfin

--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -7,9 +7,9 @@ services:
     volumes:
       - ~/homelab/jellyfin/config:/config
       - ~/homelab/jellyfin/cache:/cache
-      #- type: bind
-      #  source: /path/to/media
-      #  target: /media
+      - type: bind
+        source: /media/storage/
+        target: /media
       #- type: bind
       #  source: /path/to/media2
       #  target: /media2
