--- a/dashy/compose.yaml
+++ b/dashy/compose.yaml
@@ -1,5 +1,3 @@
----
-version: "3.8"
 services:
   dashy:
     # To build from source, replace 'image: lissy93/dashy' with 'build: .'
@@ -26,3 +24,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 1024m
