--- a/dashy/compose.yaml
+++ b/dashy/compose.yaml
@@ -13,8 +13,8 @@ services:
     environment:
       - NODE_ENV=production
     # Specify your user ID and group ID. You can find this by running `id -u` and `id -g`
-    #  - UID=1000
-    #  - GID=1000
+      - UID=1000
+      - GID=1000
     # Specify restart policy
     restart: unless-stopped
     # Configure healthchecks
@@ -24,4 +24,3 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    memory-swappiness: 100
