--- a/homer/compose.yaml
+++ b/homer/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: b4bz/homer:latest
     container_name: homer
     volumes:
-      - ~homelab/homer:/www/assets
+      - ~homelab/homer/config:/www/assets
     ports:
       - "80:8080"
     expose:
