--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -24,7 +24,7 @@ services:
       #  source: /path/to/fonts
       #  target: /usr/local/share/fonts/custom
       #  read_only: true
-    restart: 'unless-stopped'
+    restart: always
     # Optional - alternative address used for autodiscovery
     #environment:
     #  - JELLYFIN_PublishedServerUrl=http://example.com
