--- a/immich/.env
+++ b/immich/.env
@@ -4,7 +4,7 @@
 UPLOAD_LOCATION=/bazen-raid/bazen-raid/Fotky
 
 # The location where your database files are stored. Network shares are not supported for the database
-DB_DATA_LOCATION=./postgres
+DB_DATA_LOCATION=pgdata
 
 # To set a timezone, uncomment the next line and change Etc/UTC to a TZ identifier from this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 # TZ=Etc/UTC
