--- a/immich/compose.yaml
+++ b/immich/compose.yaml
@@ -9,6 +9,10 @@
 
 name: immich
 
+networks:
+  immich-network:
+    name: immich-network
+
 services:
   immich-server:
     container_name: immich_server
@@ -30,6 +34,8 @@ services:
     restart: always
     healthcheck:
       disable: false
+    networks:
+      - immich-network
 
   immich-machine-learning:
     container_name: immich_machine_learning
@@ -46,6 +52,8 @@ services:
     restart: always
     healthcheck:
       disable: false
+    networks:
+      - immich-network
 
   redis:
     container_name: immich_redis
@@ -53,6 +61,8 @@ services:
     healthcheck:
       test: redis-cli ping || exit 1
     restart: always
+    networks:
+      - immich-network
 
   database:
     container_name: immich_postgres
@@ -69,6 +79,8 @@ services:
       - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
     shm_size: 128mb
     restart: always
+    networks:
+      - immich-network
 
 volumes:
   model-cache:
